@@ -1,3 +1,8 @@
+2003-12-09  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 04024] fix: drive letter
+	* url.c (parseURL2): fix for SUPPORT_DOS_DRIVE_PREFIX
+
 2003-12-09  YONETANI Tomokazu <qhwt@myrealbox.com>
 
 	* [w3m-dev 04022] $^
@@ -8273,4 +8278,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.893 2003/12/08 16:15:17 ukai Exp $
+$Id: ChangeLog,v 1.894 2003/12/08 16:17:19 ukai Exp $
